navidrome/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.63.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4533
              name: http
              protocol: TCP
          volumeMounts:
            - name: navidrome-data
              mountPath: /data
            - name: navidrome-music
              mountPath: /music
              readOnly: true
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 4
              memory: 4Gi
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data-pvc
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 4533
      protocol: TCP
      targetPort: 4533
  type: ClusterIP
