navidrome/resources/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-music
  namespace: navidrome
spec:
  headers:
    # prevent MIME-type sniffing
    contentTypeNosniff: true
    # clickjacking protection
    frameDeny: true
    contentSecurityPolicy: >-
      base-uri 'self';
      connect-src 'self';
      font-src 'self';
      form-action 'self';
      frame-ancestors 'none';
      frame-src 'none';
      img-src 'self' data: blob:;
      manifest-src 'self';
      media-src 'self';
      object-src 'none';
      worker-src 'self';
      upgrade-insecure-requests
    # restrict browser features
    # set to (self) as needed.
    permissionsPolicy: >-
      accelerometer=(),
      bluetooth=(),
      camera=(),
      geolocation=(),
      gyroscope=(),
      interest-cohort=(),
      magnetometer=(),
      microphone=(),
      midi=(),
      payment=(),
      picture-in-picture=(),
      publickey-credentials-get=(),
      screen-wake-lock=(),
      serial=(),
      usb=(),
      vr=()
    # dont leak url paths to other origins
    referrerPolicy: strict-origin-when-cross-origin
    # hsts configs
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    # block bots
    customResponseHeaders:
      X-Robots-Tag: "noindex, nofollow, noarchive, nosnippet, notranslate, noimageindex"
      Cross-Origin-Opener-Policy: "same-origin"
      Cross-Origin-Resource-Policy: "same-site"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-webui
  namespace: navidrome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`music.cryogence.io`)
      services:
        - name: navidrome
          port: 4533
          scheme: http
      middlewares:
        - name: headers-music
          namespace: navidrome
        - name: headers-authfwd
          namespace: authentik
  tls:
    secretName: cert-music-io
